--- a/Maui/SimpleWeather.Maui/Controls/Graphs/Views/BarGraphPanel.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/Graphs/Views/BarGraphPanel.xaml
@@ -32,8 +32,7 @@
             BottomTextColor="{AppThemeBinding Light=Black, Dark=White}"
             DrawDataLabels="True"
             DrawIconLabels="False"
-            FontSize="{OnIdiom Phone=13,
-                               Default=15}"
+            FontSize="{OnIdiom Phone=13, Default=15}"
             HeightRequest="{OnIdiom Default=275, Tablet=225, Phone=150}"
             HorizontalOptions="FillAndExpand"
             ItemWidthChanged="GraphView_ItemWidthChanged"
