--- a/Maui/SimpleWeather.Maui/Controls/LocationPanel.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/LocationPanel.xaml
@@ -39,6 +39,8 @@
             Grid.ColumnSpan="3"
             IsVisible="{x:Bind uwpUtils:FeatureSettings.BackgroundImage, Mode=OneWay}">
             <Grid.Background>
+                <!-- TEMP: Remove as gradient spills outside of view
+                https://github.com/dotnet/maui/issues/18664
                 <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
                     <LinearGradientBrush.GradientStops>
                         <GradientStop Offset="0" Color="#83121212" />
@@ -46,6 +48,8 @@
                         <GradientStop Offset="1" Color="#83121212" />
                     </LinearGradientBrush.GradientStops>
                 </LinearGradientBrush>
+                -->
+                <SolidColorBrush Color="#83121212" />
             </Grid.Background>
         </Grid>
         <ActivityIndicator
