--- a/Maui/SimpleWeather.Maui/Controls/MoonPhaseControl.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/MoonPhaseControl.xaml
@@ -7,6 +7,7 @@
              xmlns:commonControls="clr-namespace:SimpleWeather.Common.Controls;assembly=SimpleWeather.Common"
              xmlns:controls="clr-namespace:SimpleWeather.Maui.Controls"
              xmlns:converters="clr-namespace:SimpleWeather.Maui.Converters"
+             xmlns:mrkup="clr-namespace:SimpleWeather.Maui.MarkupExtensions"
              xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
              xmlns:wicons="clr-namespace:SimpleWeather.Icons;assembly=SimpleWeather.Shared"
              x:DataType="commonControls:MoonPhaseViewModel"
@@ -14,14 +15,12 @@
     <ContentView.Resources>
         <Style x:Key="DisabledMoonStyle" TargetType="controls:IconControl">
             <Setter Property="Opacity" Value="0.5" />
-            <Setter Property="Margin" Value="5" />
             <Setter Property="HorizontalOptions" Value="Center" />
             <Setter Property="VerticalOptions" Value="Center" />
             <Setter Property="IconColor" Value="{AppThemeBinding Light=Black, Dark=WhiteSmoke}" />
         </Style>
         <Style x:Key="MoonStyle" TargetType="controls:IconControl">
             <Setter Property="Opacity" Value="1" />
-            <Setter Property="Margin" Value="5" />
             <Setter Property="HorizontalOptions" Value="Center" />
             <Setter Property="VerticalOptions" Value="Center" />
             <Setter Property="IconColor" Value="{AppThemeBinding Light=Black, Dark=White}" />
@@ -37,7 +36,7 @@
             x:Name="MoonStack"
             Padding="{OnIdiom Default='15,0', Phone='4,0'}"
             HorizontalOptions="Center"
-            Wrap="NoWrap" AlignContent="Center" JustifyContent="Center" AlignItems="Center">
+            Wrap="Wrap" AlignContent="Center" JustifyContent="Center" AlignItems="Center">
             <!--  New Moon  -->
             <controls:IconControl
                 x:Name="NewMoonIcon"
