--- a/Maui/SimpleWeather.Maui/Preferences/Settings_Icons.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_Icons.xaml
@@ -9,8 +9,8 @@
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
     xmlns:utils="clr-namespace:SimpleWeather.Utils;assembly=SimpleWeather.Shared"
     Title="{x:Static res_strings:Resources.pref_title_icons}"
-    BackgroundColor="{AppThemeBinding Light={DynamicResource WhiteBrush},
-                                      Dark={StaticResource BlackBrush}}"
+    BackgroundColor="{AppThemeBinding Light={StaticResource LightBackground},
+                                      Dark={StaticResource DarkBackground}}"
     main:AppShell.AppBarIsVisible="True">
 
     <Grid>
