--- a/Maui/SimpleWeather.Maui/Resources/Styles/Styles.xaml
+++ b/Maui/SimpleWeather.Maui/Resources/Styles/Styles.xaml
@@ -616,4 +616,10 @@
         </Setter>
     </Style>
 
+    <Style x:Key="AppBarBorderStyle" TargetType="Rectangle">
+        <Setter Property="HeightRequest" Value="1" />
+        <Setter Property="StrokeThickness" Value="1" />
+        <Setter Property="Stroke" Value="{AppThemeBinding Light={StaticResource LightAppBarBorder}, Dark={StaticResource DarkAppBarBorder}}" />
+    </Style>
+
 </ResourceDictionary>
