FeatureSettings: fix for settings to take effect during runtime

--- a/Maui/SimpleWeather.Maui/Main/LocationsPage.xaml
+++ b/Maui/SimpleWeather.Maui/Main/LocationsPage.xaml
@@ -108,7 +108,7 @@
                                                 <SwipeItem.IconImageSource>
                                                     <matIcons:MaterialIcon
                                                         Size="24"
-                                                        Symbol="Add"
+                                                        Symbol="Delete"
                                                         Color="White" />
                                                 </SwipeItem.IconImageSource>
                                             </SwipeItem>
