WeatherNow: update extra details layout

--- a/Maui/SimpleWeather.Maui/Controls/AQIControl.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/AQIControl.xaml
@@ -12,7 +12,7 @@
     MinimumWidthRequest="340">
     <Grid
         ColumnDefinitions="Auto,*"
-        RowDefinitions="Auto,*,Auto,Auto">
+        RowDefinitions="Auto,Auto,Auto,Auto">
         <Label
             x:Name="AQILabel"
             Grid.Row="0"
