--- a/Maui/SimpleWeather.Maui/Preferences/Settings_About.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_About.xaml
@@ -8,7 +8,7 @@
     xmlns:m="clr-namespace:SimpleWeather.Maui.MarkupExtensions"
     xmlns:mac="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.macOSSpecific;assembly=Microsoft.Maui.Controls"
     xmlns:main="clr-namespace:SimpleWeather.Maui.Main"
-    xmlns:prefs="clr-namespace:SimpleWeather.Maui.Preferences;assembly=SimpleWeather.Maui"
+    xmlns:prefs="clr-namespace:SimpleWeather.Maui.Preferences"
     xmlns:radar="clr-namespace:SimpleWeather.NET.Radar"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
     xmlns:settings="clr-namespace:SimpleWeather.Preferences;assembly=SimpleWeather.Shared"
