--- a/Maui/SimpleWeather.Maui/Preferences/Settings_Features.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_Features.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:main="clr-namespace:SimpleWeather.Maui.Main"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
-    xmlns:prefs="clr-namespace:SimpleWeather.Maui.Preferences;assembly=SimpleWeather.Maui"
+    xmlns:prefs="clr-namespace:SimpleWeather.Maui.Preferences"
     xmlns:uwpUtils="clr-namespace:SimpleWeather.NET.Utils"
     Title="{x:Static res_strings:Resources.pref_title_features}"
     BackgroundColor="{AppThemeBinding Light={StaticResource LightBackground},
