--- a/Maui/SimpleWeather.Maui/Resources/Styles/Controls.xaml
+++ b/Maui/SimpleWeather.Maui/Resources/Styles/Controls.xaml
@@ -3,17 +3,17 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:controls="clr-namespace:SimpleWeather.Maui.Controls;assembly=SimpleWeather.Maui"
+    xmlns:controls="clr-namespace:SimpleWeather.Maui.Controls"
     xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
     xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
     xmlns:localGraphs="clr-namespace:SimpleWeather.NET.Controls.Graphs"
     xmlns:location="clr-namespace:SimpleWeather.LocationData;assembly=SimpleWeather.Shared"
-    xmlns:maticons="clr-namespace:SimpleWeather.Maui.MaterialIcons;assembly=SimpleWeather.Maui"
+    xmlns:maticons="clr-namespace:SimpleWeather.Maui.MaterialIcons"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:mext="clr-namespace:SimpleWeather.Maui.MarkupExtensions;assembly=SimpleWeather.Maui"
+    xmlns:mext="clr-namespace:SimpleWeather.Maui.MarkupExtensions"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
-    xmlns:sharedControls="clr-namespace:SimpleWeather.NET.Controls;assembly=SimpleWeather.Maui"
-    xmlns:stepper="clr-namespace:SimpleWeather.Maui.Stepper;assembly=SimpleWeather.Maui"
+    xmlns:sharedControls="clr-namespace:SimpleWeather.NET.Controls"
+    xmlns:stepper="clr-namespace:SimpleWeather.Maui.Stepper"
     xmlns:stk="clr-namespace:SimpleToolkit.Core;assembly=SimpleToolkit.Core"
     mc:Ignorable="d">
     <x:Double x:Key="AppBarThemeCompactHeight">40</x:Double>
