--- a/Maui/SimpleWeather.Maui/Resources/Styles/Converters.xaml
+++ b/Maui/SimpleWeather.Maui/Resources/Styles/Converters.xaml
@@ -2,7 +2,7 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:converters="clr-namespace:SimpleWeather.Maui.Converters;assembly=SimpleWeather.Maui"
+    xmlns:converters="clr-namespace:SimpleWeather.Maui.Converters"
     xmlns:toolkitConverters="clr-namespace:CommunityToolkit.Maui.Converters;assembly=CommunityToolkit.Maui">
     <toolkitConverters:InvertedBoolConverter x:Key="inverseBoolConverter" />
     <converters:ColorToSolidColorBrushConverter x:Key="color2SolidColorConverter" />
