--- a/Maui/SimpleWeather.Maui/Setup/SetupSettingsPage.xaml
+++ b/Maui/SimpleWeather.Maui/Setup/SetupSettingsPage.xaml
@@ -7,7 +7,7 @@
     xmlns:helpers="clr-namespace:SimpleWeather.Maui.Helpers"
     xmlns:local="clr-namespace:SimpleWeather.Maui.Setup"
     xmlns:matIcons="clr-namespace:SimpleWeather.Maui.MaterialIcons"
-    xmlns:prefs="clr-namespace:SimpleWeather.Maui.Preferences;assembly=SimpleWeather.Maui"
+    xmlns:prefs="clr-namespace:SimpleWeather.Maui.Preferences"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
     xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
     Background="{DynamicResource PrimarySurfaceColorBrush}"
